Validacao de CPF

--- a/ExercicioOO/ExercicioOO/ExercicioOO.csproj
+++ b/ExercicioOO/ExercicioOO/ExercicioOO.csproj
@@ -10,5 +10,6 @@
     <Folder Include="Model\" />
     <Folder Include="DAL\" />
     <Folder Include="Propers\" />
+    <Folder Include="Beans\" />
   </ItemGroup>
 </Project>
